--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>this is the bare bone</h1>
         <h2>Test</h2>
         <h5>nice</h5>
+        <h3>successful config</h3>
     </body>
 </html>
