--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                                 <i class="uil uil-estate"></i> Home
                             </a>
                             <a href="#" class="nav__link">
-                                
+                                <i class="uil uil-user"></i> About
                             </a>
                             <a href="#" class="nav__link">
                                 
